<resources>
    <string name="app_name">Cert Verifier</string>
    <string name="tab_text_1">Information</string>
    <string name="tab_text_2">Scan</string>
    <string name="tab_text_3">Report</string>
    <string name="action_settings">Settings</string>
    <string name="Title">Certificate Verification</string>
    <string name="title">Certificate Verification</string>

    <string name="report_an_issue">Report an issue</string>
    <string name="please_help_us_by_completing_the_information_below_if_you_find_the_certificate_suspicious">Please help us by completing the information below if you find the certificate suspicious</string>
    <string name="reason">Reason</string>
    <string name="a_mismatch_found">A mismatch found</string>
    <string name="certificate_not_found">Certificate not found</string>
    <string name="labels_not_properly_applied">Labels not properly applied</string>
    <string name="institution_town">Institution/Town</string>
    <string name="name_the_place_here">Name the place here</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="sign_out">Sign out</string>
    <string name="no_text" />
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign_Up</string>
    <string name="login">Login</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="enter_premises">Enter Premises</string>
    <string name="enter_name">Enter Name</string>
    <string name="loginBtn">Login</string>
    <string name="Paragraph1">Kenya National Examination Council labels posses multiple security features some of which can be checked by the human eye or electronically.</string>
    <string name="paragraph2">This app allows you to verify the authenticity of these labels as they appear on different certificates issued by KNEC. The most recent certificates contain a secure QR Code image that can be verified using the scanner provided in this app.</string>
    <string name="paragraph_1_report">In addition to scanning excise, A report can be filed for any instance of a suspicious certificate. This would include where labels are not properly labeled or not placed as they should be and also in case of a mismatch in the results after scanning with the certificate presented.</string>
    <string name="bottomParagraph2report">Each report is filed and sent to the certificate issuing institution for clarification.</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="minimum_password">Password must be greater than 6 characters!</string>
    <string name="forgot_password">Forgot password</string>
    <string name="back"><![CDATA[<< BACK]]></string>
    <string name="we_just_need_your_email_address_to_help_you_reset_your_password">We just need your email address to help you reset your password</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="certificate_verification">Certificate Verification</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="image1">The app allows a user to scan the qr code embedded on the certificate presented to the user using the scanner provided</string>

</resources>
