<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="178dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:src="@drawable/knec_logo"/>

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Are you a new user?"
        android:textStyle="bold"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:background="@drawable/bottom_border"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/textLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:singleLine="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        android:maxLines="1"
        android:padding="12dp"
        android:background="@drawable/bottom_border"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/place"
        android:hint="@string/enter_premises"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:background="@drawable/bottom_border"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="12dp"
        android:background="@drawable/bottom_border"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/place"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="12dp"
        android:background="@drawable/bottom_border"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:singleLine="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signUp_button"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:text="@string/sign_up_btn"
        android:paddingBottom="16dp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/signUp_button"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>