<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="178dp"
        android:layout_height="145dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:src="@drawable/knec_logo"/>

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aready have an account?"
        android:textStyle="bold"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="12dp"
        android:background="@drawable/bottom_border"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/textLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="12dp"
        android:background="@drawable/bottom_border"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:singleLine="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:text="@string/loginBtn"
        android:paddingBottom="16dp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/sign_up"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetPassword"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/forgot_password"
        android:layout_below="@+id/register"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>