<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:background="@android:color/background_light"
    android:layout_height="match_parent"
    tools:context=".ResetPassword">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="178dp"
        android:layout_height="145dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:src="@drawable/knec_logo"/>

    <TextView
        android:id="@+id/resetText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/logo"
        android:layout_below="@+id/logo"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="Forgot password?"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetText2"
        android:gravity="center_horizontal"
        android:layout_below="@+id/resetText1"
        android:text="@string/we_just_need_your_email_address_to_help_you_reset_your_password"
        android:padding="8dp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resetEmail"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="12dp"
        android:background="@drawable/bottom_border"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/resetText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:singleLine="true"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resetPasswordBtn"
        android:layout_below="@+id/resetEmail"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:text="@string/reset_password"
        android:paddingBottom="12dp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/back"
        android:textStyle="bold"
        android:layout_below="@+id/resetPasswordBtn"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>