<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".BottomNavActivies.Report_NavBar">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">
        <android.support.v7.widget.Toolbar
            android:id="@+id/reportToobar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rellayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Report an issue"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_help_us_by_completing_the_information_below_if_you_find_the_certificate_suspicious"
                    android:textSize="17sp"
                    />
                <Space
                    android:layout_width="400dp"
                    android:layout_height="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Reason"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:id="@+id/radiogroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/radio1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/a_mismatch_found"
                            android:textSize="17sp"/>
                        <RadioButton
                            android:id="@+id/radio2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/certificate_not_found"
                            android:textSize="17sp"/>
                        <RadioButton
                            android:id="@+id/radio3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/labels_not_properly_applied"
                            android:textSize="17sp"/>


                    </RadioGroup>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/institution_town"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/ETplace"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:hint="@string/name_the_place_here"
                    android:background="#b7b5b7"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Take a picture"
                        android:textSize="22sp"
                        android:textStyle="bold"/>
                    <ImageButton
                        android:id="@+id/btnPhoto"
                        android:layout_width="150dp"
                        android:layout_height="130dp"
                        android:src="@drawable/ic_camera_24dp"
                        android:background="#b7b5b7"
                        android:layout_marginLeft="57dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Description (Certificate info, problem details, comments)"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/ETdesc"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:hint="Add more details here"
                    android:gravity="start"
                    android:background="#b7b5b7"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Information"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/ETname"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:hint="Name"
                    android:background="#b7b5b7"
                    android:layout_marginTop="4dp"/>
                <EditText
                    android:id="@+id/ETemail"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:hint="Email "
                    android:background="#b7b5b7"/>
            </LinearLayout>

        </ScrollView>

    </RelativeLayout>


</LinearLayout>