<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    android:layout_height="match_parent"
    tools:context=".Profile_Settings">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_img_settings"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        app:civ_border_color="@android:color/background_dark"
        app:civ_border_width="3dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/profile"/>

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set up your profile details here"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_below="@+id/profile_img_settings"
        android:layout_centerHorizontal="true"
        android:background="@android:color/background_light"/>

    <Button
        android:id="@+id/edit_profile_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profile_img_settings"
        android:layout_toEndOf="@+id/profile_img_settings"
        android:background="@android:color/background_light"
        android:drawableRight="@drawable/edit"
        android:text=". . . ."
        android:textStyle="bold"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_name"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:background="@drawable/bottom_border"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/textLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:singleLine="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_phone"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        android:maxLines="1"
        android:padding="12dp"
        android:background="@drawable/bottom_border"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/settings_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_place"
        android:hint="@string/enter_premises"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:background="@drawable/bottom_border"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/settings_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_email"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="12dp"
        android:background="@drawable/bottom_border"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/settings_place"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:singleLine="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_btn"
        android:layout_below="@+id/settings_email"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:text="Save Account Details"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"/>


</RelativeLayout>
