<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/Paragraph1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textv1"
                android:layout_margin="12dp"
                android:text="@string/paragraph2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textv2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="Scanning guidelines to the users"
                android:textColor="@android:color/holo_red_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/instructions"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="200dp"
                    android:layout_height="160dp"
                    android:src="@drawable/qr_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/image1"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/layout1"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="200dp"
                    android:layout_height="160dp"
                    android:src="@drawable/qr5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="The application verifies the results of the certificate by displaying the results and the user can compare the generated results with those of the certificate"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="italic" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>



</RelativeLayout>